travis-ci display error fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,11 @@ before_install:
 install:
   - yarn install --force
 
+before_script:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export DISPLAY=:99.0; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sh -e /etc/init.d/xvfb start; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sleep 3; fi
+
 script:
   - yarn lint
   - yarn build:prod
