--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@types/mocha": "^2.2.47",
     "@types/node": "^9.4.0",
     "@types/react": "^16.0.35",
-    "@types/react-addons-test-utils": "^0.14.20",
     "@types/react-dom": "^16.0.3",
     "@types/react-hot-loader": "^3.0.5",
     "awesome-typescript-loader": "^3.4.1",
@@ -80,7 +79,6 @@
     "mri": "^1.1.0",
     "node-sass": "^4.7.2",
     "prettier": "^1.10.2",
-    "react-addons-test-utils": "^15.6.2",
     "react-hot-loader": "^3.1.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
@@ -99,7 +97,7 @@
     "xvfb-maybe": "^0.2.1"
   },
   "dependencies": {
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2"
+    "react": "^16.2.0",
+    "react-dom": "16.2.0"
   }
 }
