--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-react-skeleton",
   "description": "Electron application skeleton based on React, Webpack.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "./main.js",
   "build": {
     "productName": "Electron-Skeleton",
@@ -46,58 +46,60 @@
     "cleanup": "rimraf build dist node_modules"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.2",
-    "@types/mocha": "^2.2.47",
-    "@types/node": "^9.4.0",
-    "@types/react": "^16.0.35",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-hot-loader": "^3.0.5",
-    "awesome-typescript-loader": "^3.4.1",
-    "babel-core": "^6.26.0",
-    "babel-minify": "^0.2.0",
-    "babel-webpack-plugin": "^0.1.1",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@types/chai": "^4.1.4",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.5.3",
+    "@types/react": "^16.4.7",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-hot-loader": "^4.1.0",
+    "awesome-typescript-loader": "^5.2.0",
+    "babel-loader": "^8.0.0-beta.4",
+    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "chalk": "^2.3.0",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.9",
-    "electron": "^1.7.11",
-    "electron-devtools-installer": "^2.2.3",
-    "electron-mocha": "^5.0.0",
-    "electron-packager": "^10.1.2",
-    "eslint": "^4.16.0",
+    "chalk": "^2.4.1",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "electron": "^2.0.5",
+    "electron-devtools-installer": "^2.2.4",
+    "electron-mocha": "^6.0.4",
+    "electron-packager": "^12.1.0",
+    "eslint": "^5.2.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-prettier": "^2.5.0",
-    "eslint-plugin-react": "^7.6.0",
-    "eslint-plugin-typescript": "^0.8.1",
-    "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "fs-extra": "^5.0.0",
-    "html-webpack-plugin": "^2.30.1",
-    "mocha": "^5.0.0",
-    "mri": "^1.1.0",
-    "node-sass": "^4.7.2",
-    "prettier": "^1.10.2",
-    "react-hot-loader": "^3.1.3",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-typescript": "^0.12.0",
+    "express": "^4.16.3",
+    "fs-extra": "^7.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "mocha": "^5.2.0",
+    "mri": "^1.1.1",
+    "node-sass": "^4.9.2",
+    "prettier": "^1.13.7",
+    "react-hot-loader": "^4.3.4",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1",
-    "ts-node": "^4.1.0",
-    "tslint": "^5.9.1",
-    "tslint-config-prettier": "^1.6.0",
-    "tslint-microsoft-contrib": "^5.0.2",
-    "tslint-react": "^3.4.0",
-    "typescript": "^2.6.2",
-    "typescript-eslint-parser": "^12.0.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^2.0.4",
-    "webpack-hot-middleware": "^2.21.0",
-    "webpack-merge": "^4.1.1",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "ts-node": "^7.0.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0",
+    "tslint-microsoft-contrib": "^5.1.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^2.9.2",
+    "typescript-eslint-parser": "^17.0.1",
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack-merge": "^4.1.3",
     "xvfb-maybe": "^0.2.1"
   },
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "16.2.0"
+    "react": "^16.4.1",
+    "react-dom": "16.4.1"
   }
 }
