--- a/package.json
+++ b/package.json
@@ -46,60 +46,67 @@
     "cleanup": "rimraf build dist node_modules"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "@types/chai": "^4.1.4",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@types/chai": "^4.1.6",
+    "@types/electron-packager": "^12.0.0",
+    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.5.3",
-    "@types/react": "^16.4.7",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-hot-loader": "^4.1.0",
-    "awesome-typescript-loader": "^5.2.0",
-    "babel-loader": "^8.0.0-beta.4",
+    "@types/mri": "^1.1.0",
+    "@types/node": "^10.11.3",
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.8",
+    "@types/webpack": "^4.4.13",
+    "@types/webpack-dev-middleware": "^2.0.2",
+    "@types/webpack-hot-middleware": "^2.16.4",
+    "@types/webpack-merge": "^4.1.3",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.4",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chalk": "^2.4.1",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "electron": "^2.0.5",
+    "electron": "^3.0.2",
     "electron-devtools-installer": "^2.2.4",
     "electron-mocha": "^6.0.4",
-    "electron-packager": "^12.1.0",
-    "eslint": "^5.2.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.10.0",
+    "electron-packager": "^12.1.2",
+    "eslint": "^5.6.1",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-babel": "^5.2.1",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-typescript": "^0.12.0",
     "express": "^4.16.3",
     "fs-extra": "^7.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^0.4.3",
     "mocha": "^5.2.0",
     "mri": "^1.1.1",
-    "node-sass": "^4.9.2",
-    "prettier": "^1.13.7",
-    "react-hot-loader": "^4.3.4",
+    "node-sass": "^4.9.3",
+    "prettier": "^1.14.3",
+    "react-hot-loader": "^4.3.11",
     "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "ts-node": "^7.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.14.0",
-    "tslint-microsoft-contrib": "^5.1.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-microsoft-contrib": "^5.2.1",
     "tslint-react": "^3.6.0",
-    "typescript": "^2.9.2",
-    "typescript-eslint-parser": "^17.0.1",
-    "webpack": "^4.16.3",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.3",
-    "webpack-merge": "^4.1.3",
+    "typescript": "^3.1.1",
+    "typescript-eslint-parser": "^19.0.2",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-hot-middleware": "^2.24.2",
+    "webpack-merge": "^4.1.4",
     "xvfb-maybe": "^0.2.1"
   },
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   }
 }
