--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "description": "Electron application skeleton based on React, Webpack.",
   "version": "0.0.2",
   "main": "./main.js",
-  "build": {
-    "productName": "Electron-Skeleton",
-    "companyName": "Electron-Skeleton",
-    "appBundleId": "com.example.electron-skeleton"
-  },
+  "productName": "Electron-Skeleton",
+  "companyName": "Electron-Skeleton",
+  "appBundleId": "com.example.electron-skeleton",
   "license": "MIT",
   "author": {
     "name": "Svetli Nikolov",
@@ -29,14 +27,14 @@
     "npm": ">= 4"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development node ./scripts/start",
-    "start:prod": "cross-env NODE_ENV=production node ./scripts/start",
-    "compile:dev": "cross-env NODE_ENV=development webpack --config ./webpack/webpack.development.js",
-    "compile:prod": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.production.js",
-    "build:dev": "yarn compile:dev && cross-env NODE_ENV=development node ./scripts/build",
-    "build:prod": "yarn compile:prod && cross-env NODE_ENV=production node ./scripts/build",
+    "start": "cross-env NODE_ENV=development ts-node ./scripts/start.ts",
+    "start:prod": "cross-env NODE_ENV=production ts-node ./scripts/start.ts",
+    "compile:dev": "cross-env NODE_ENV=development webpack --config ./webpack/webpack.development.ts",
+    "compile:prod": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.production.ts",
+    "build:dev": "yarn compile:dev && cross-env NODE_ENV=development ts-node ./scripts/build.ts",
+    "build:prod": "yarn compile:prod && cross-env NODE_ENV=production ts-node ./scripts/build.ts",
     "test": "cross-env TEST_ENV=1 xvfb-maybe electron-mocha -t 10000 --renderer --require ts-node/register app/test/*.{ts,tsx} app/test/**/*.{ts,tsx}",
-    "eslint": "node ./scripts/eslint",
+    "eslint": "ts-node ./scripts/eslint.ts",
     "eslint:fix": "yarn eslint --fix",
     "eslint:check": "eslint --print-config .eslintrc.* | eslint-config-prettier-check",
     "tslint": "tslint ./app/{src,test}/**/*.{ts,tsx}",
@@ -50,6 +48,9 @@
     "@babel/preset-env": "^7.1.0",
     "@types/chai": "^4.1.6",
     "@types/electron-packager": "^12.0.0",
+    "@types/eslint": "^4.16.3",
+    "@types/express": "^4.16.0",
+    "@types/fs-extra": "^5.0.4",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/mocha": "^5.2.5",
